--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,34 @@
 /* Give your page a fun background color */
-
+body{
+  background-color:lightblue;
+}
 /* Make the header and footer a different color from the background */
-
+footer{
+  background-color:pink;
+}
 /* Align the h1 containing your name in the center of the header*/
+h1{
+  text-align: center;
+  background-color:pink;
 
+}
 /* Make your p tag a different color and italic */
-
+p{
+  font-style: italic;
+  color:white;
+}
 /* Put a border around your image */
-
+img{
+  border: 1px;
+}
 /* Change the font-family of your list */
+ul{
+  font-family: sans-serif;
+  list-style-type: none;
+  margin:0px;
+  padding:0px;
+}
+#profile{
+  width:200px;
+  height:200px;
+}
